XP-795 Image Uploader - Add image placeholder for nicer loading * Show transparent checkered placeholder before image is loaded * Toggle visibility of the Remove icon based on if image is selected or not * Fixed image not being highlighted upon getting focus when tabbing

--- a/modules/admin-ui/src/main/resources/web/admin/common/styles/api/ui/image/image-editor.less
+++ b/modules/admin-ui/src/main/resources/web/admin/common/styles/api/ui/image/image-editor.less
@@ -41,7 +41,7 @@
   .image-canvas {
     overflow: visible;
     position: relative;
-    background-color: @admin-black;
+    background: url("../images/checker-16x16.png") repeat;
     box-shadow: none;
     border: 1px solid @admin-white;
 
